--- a/ProceduralTerrain/ProceduralTerrain.vcxproj
+++ b/ProceduralTerrain/ProceduralTerrain.vcxproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CubeGeometry.h" />
     <ClInclude Include="Directions.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Geometry.h" />
