Rudimentary model loading

--- a/ProceduralTerrain/ProceduralTerrain.vcxproj
+++ b/ProceduralTerrain/ProceduralTerrain.vcxproj
@@ -88,7 +88,7 @@
       <PreprocessorDefinitions>GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;glew32s.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;glew32s.lib;SOIL.lib;assimp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -120,7 +120,6 @@
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="LocalPlayer.cpp" />
-    <ClCompile Include="MeshModel.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Progam.cpp" />
     <ClCompile Include="Renderer.cpp" />
