--- a/ProceduralTerrain/ProceduralTerrain.vcxproj
+++ b/ProceduralTerrain/ProceduralTerrain.vcxproj
@@ -140,9 +140,11 @@
     <ClInclude Include="MaterialBasicUploader.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MaterialBasic.h" />
+    <ClInclude Include="MeshCollection.h" />
     <ClInclude Include="MeshModel.h" />
     <ClInclude Include="MeshRenderer.h" />
     <ClInclude Include="Object3D.h" />
+    <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="PlaneGeometry.h" />
     <ClInclude Include="PlaneMesh.h" />
     <ClInclude Include="Player.h" />
