--- a/ProceduralTerrain/ProceduralTerrain.vcxproj.filters
+++ b/ProceduralTerrain/ProceduralTerrain.vcxproj.filters
@@ -158,6 +158,12 @@
     <ClInclude Include="MeshTerrain.h">
       <Filter>Header Files\Mesh</Filter>
     </ClInclude>
+    <ClInclude Include="TileMesh.h">
+      <Filter>Header Files\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="TerrainRenderer.h">
+      <Filter>Header Files\Terrain</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="meshbasic.vert">
